# better-bar

./: .gitignore  Cargo.toml  Project.md  README.md  STRUCTURE.md  build.sh  run.sh
src/: main.rs
src/config/: config.rs  config_helper.rs  mod.rs
src/system/: global.rs  mod.rs  system_info_modules.rs  updater.rs
src/ui/: bar.rs  mod.rs  settings.rs  styles.rs
src/ui/modules/: clock.rs  mod.rs  panel.rs
src/ui/modules/battery/: battery.rs  battery_helper.rs  battery_info.rs  battery_updater.rs  mod.rs
src/ui/modules/cpu/: cpu.rs  cpu_widget.rs  mod.rs
src/ui/modules/hyprland/: mod.rs
src/ui/modules/hyprland/window/: mod.rs  window_title.rs
src/ui/modules/hyprland/workspace/: workspaces.rs
src/ui/modules/launcher/: app_launcher.rs  mod.rs
src/ui/modules/memory/: memory.rs  memory_widget.rs  mod.rs
src/ui/modules/network/: mod.rs  network.rs  network_helper.rs  network_info.rs  network_updater.rs
src/ui/modules/volume/: mod.rs  monitor.rs  volume.rs  volume_helper.rs  volume_info.rs
src/ui/settings/: config_page.rs  config_tab.rs  mod.rs  modules_page.rs  modules_tab.rs  settings.rs
src/ui/style/: default.css
