[package]
name = "better-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.23"
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_12"] }
gtk4-layer-shell = "0.5.0"
gio = { version = "0.20.12", features = ["v2_76"] }
glib = { version = "0.20.12", features = ["v2_76"] }
chrono = { version = "0.4"}
serde = { version = "1.0.219", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
hyprland = "0.4.0-beta.2"
once_cell = "1.5"
futures = "0.3"

# for system info
sysinfo = "0.35.2"
battery = "0.7"
lazy_static = "1.4"
zbus = "5.7.1"
zvariant = "5.5.3"
dirs = "6.0.0"