[package]
name = "better-bar"
version = "0.1.1"
edition = "2024"
authors = ["sandesh2007"]

[dependencies]
toml = "0.9.5"
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_12"] }
gtk4-layer-shell = "0.5.0"
gio = { version = "0.20.12", features = ["v2_76"] }
glib = { version = "0.20.12", features = ["v2_76"] }
chrono = { version = "0.4"}
serde = { version = "1.0.219", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
hyprland = "0.4.0-beta.2"
once_cell = "1.5"

# for system info
sysinfo = "0.37.0"
lazy_static = "1.4"
zbus = "5.7.1"
zvariant = "5.5.3"
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.99"

[package.metadata.bundle]
